--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <script src="js/pixi.min.js"> </script>
         <script src="js/text.js"> </script>
         <script src="js/container.js"> </script>
-        <script src="js/toplama.js"> </script>
+        <script src="js/LoaderConfig.js"> </script>
+        <script src="js/gameScreen.js"> </script>
+        <script src="js/mainScreen.js"> </script>
        
     </head>
     <body>
